--- a/src/components/Schedules/style.css
+++ b/src/components/Schedules/style.css
@@ -7,7 +7,6 @@
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows: 1fr;
     color: var(--text-color);
-    overflow-x: scroll;
 }
 .SchedulesContainer div {
     height: 100%;
@@ -37,4 +36,10 @@
     font-weight: 400;
     line-height: 1.56rem;
     text-align: center;
+}
+
+@media (width < 800px) {
+    .SchedulesContainer {
+        overflow-x: scroll;
+    }
 }
